lexerparser/target/generated-sources/antlr4/lexerparser/PlainEnglishParser.java
// Generated from PlainEnglish.g4 by ANTLR 4.4

	package lexerparser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlainEnglishParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__15=1, T__14=2, T__13=3, T__12=4, T__11=5, T__10=6, T__9=7, T__8=8, 
		T__7=9, T__6=10, T__5=11, T__4=12, T__3=13, T__2=14, T__1=15, T__0=16, 
		WHITESPACE=17, DOT=18, UNDERSCORE=19, LETTER=20, DOUBLEQUOTE=21, EQUALS=22, 
		FUNCTION=23, VARDEFINE=24, ASSIGN=25, EQUALSCOM=26, NOTEQUALS=27, STARTFUNC=28, 
		ENDFUNC=29, IF=30, ELSE=31, INCREMENT=32, DECREASE=33, ADD=34, MINUS=35, 
		MULT=36, DIV=37, MOD=38, AND=39, OR=40, GREATERTHAN=41, LESSTHAN=42, GREATERTHANEQ=43, 
		LESSTHANEQ=44, ARRAYGET=45, GLOBAL=46, FOR=47, WHILE=48, BREAK=49, RETURN=50, 
		NULLLITERAL=51, BOOLEANLITERAL=52, DECIMALLITERAL=53, INTEGERLITERAL=54, 
		STRINGLITERAL=55, IDENTIFIER=56;
	public static final String[] tokenNames = {
		"<INVALID>", "'do this'", "'this is true'", "'with the increment '", "'on the condition'", 
		"'please start'", "']'", "'break'", "' is true then do'", "'at the index'", 
		"'please create a list ['", "'('", "')'", "'call the function'", "'with these parameters ('", 
		"','", "'please stop'", "WHITESPACE", "'.'", "'_'", "LETTER", "'\"'", 
		"'='", "'please create the function'", "'please create the variable'", 
		"'set it to'", "'is equal to'", "'is not equal to'", "'please start function'", 
		"'that is all'", "'if'", "'else do'", "'increment'", "'decrease'", "'add'", 
		"'minus'", "'multiply'", "'divide'", "'mod'", "'and'", "'or'", "'is greater than'", 
		"'is less than'", "'is greater or equal to'", "'is less than or equal to'", 
		"'the value in the array'", "'that is global'", "'for the loop'", "'while'", 
		"'thankyou that is all'", "'please return'", "'null'", "BOOLEANLITERAL", 
		"DECIMALLITERAL", "INTEGERLITERAL", "STRINGLITERAL", "IDENTIFIER"
	};
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_block = 2, RULE_statementList = 3, 
		RULE_variableStatement = 4, RULE_singleExpression = 5, RULE_singleExpression2 = 6, 
		RULE_parameterList = 7, RULE_parameterArg = 8, RULE_arguments = 9, RULE_literal = 10, 
		RULE_numericLiteral = 11, RULE_arrayLiteral = 12, RULE_arrayGet = 13, 
		RULE_elementList = 14, RULE_expressionSequence = 15, RULE_expressionSequence2 = 16, 
		RULE_emptyStatement = 17, RULE_ifStatement = 18, RULE_iterationStatement = 19, 
		RULE_expressionStatement = 20, RULE_breakStatement = 21, RULE_returnStatement = 22, 
		RULE_functionDeclaration = 23, RULE_functionCall = 24;
	public static final String[] ruleNames = {
		"program", "statement", "block", "statementList", "variableStatement", 
		"singleExpression", "singleExpression2", "parameterList", "parameterArg", 
		"arguments", "literal", "numericLiteral", "arrayLiteral", "arrayGet", 
		"elementList", "expressionSequence", "expressionSequence2", "emptyStatement", 
		"ifStatement", "iterationStatement", "expressionStatement", "breakStatement", 
		"returnStatement", "functionDeclaration", "functionCall"
	};

	@Override
	public String getGrammarFileName() { return "PlainEnglish.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlainEnglishParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__9) | (1L << T__6) | (1L << T__5) | (1L << T__3) | (1L << DOT) | (1L << FUNCTION) | (1L << VARDEFINE) | (1L << IF) | (1L << ARRAYGET) | (1L << FOR) | (1L << WHILE) | (1L << RETURN) | (1L << NULLLITERAL) | (1L << BOOLEANLITERAL) | (1L << DECIMALLITERAL) | (1L << INTEGERLITERAL) | (1L << STRINGLITERAL) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(50); statement();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public IterationStatementContext iterationStatement() {
			return getRuleContext(IterationStatementContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public EmptyStatementContext emptyStatement() {
			return getRuleContext(EmptyStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(66);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56); block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57); variableStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58); emptyStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59); expressionStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(60); returnStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(61); functionDeclaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(62); ifStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(63); iterationStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(64); breakStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(65); functionCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); match(T__11);
			setState(70);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__9) | (1L << T__6) | (1L << T__5) | (1L << T__3) | (1L << DOT) | (1L << FUNCTION) | (1L << VARDEFINE) | (1L << IF) | (1L << ARRAYGET) | (1L << FOR) | (1L << WHILE) | (1L << RETURN) | (1L << NULLLITERAL) | (1L << BOOLEANLITERAL) | (1L << DECIMALLITERAL) | (1L << INTEGERLITERAL) | (1L << STRINGLITERAL) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(69); statementList();
				}
			}

			setState(72); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementListContext extends ParserRuleContext {
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitStatementList(this);
		}
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74); statement();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__9) | (1L << T__6) | (1L << T__5) | (1L << T__3) | (1L << DOT) | (1L << FUNCTION) | (1L << VARDEFINE) | (1L << IF) | (1L << ARRAYGET) | (1L << FOR) | (1L << WHILE) | (1L << RETURN) | (1L << NULLLITERAL) | (1L << BOOLEANLITERAL) | (1L << DECIMALLITERAL) | (1L << INTEGERLITERAL) | (1L << STRINGLITERAL) | (1L << IDENTIFIER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableStatementContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(PlainEnglishParser.ASSIGN, 0); }
		public TerminalNode DOT() { return getToken(PlainEnglishParser.DOT, 0); }
		public TerminalNode VARDEFINE() { return getToken(PlainEnglishParser.VARDEFINE, 0); }
		public TerminalNode GLOBAL() { return getToken(PlainEnglishParser.GLOBAL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PlainEnglishParser.IDENTIFIER, 0); }
		public SingleExpressionContext singleExpression() {
			return getRuleContext(SingleExpressionContext.class,0);
		}
		public VariableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterVariableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitVariableStatement(this);
		}
	}

	public final VariableStatementContext variableStatement() throws RecognitionException {
		VariableStatementContext _localctx = new VariableStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(VARDEFINE);
			setState(81);
			_la = _input.LA(1);
			if (_la==GLOBAL) {
				{
				setState(80); match(GLOBAL);
				}
			}

			setState(83); match(IDENTIFIER);
			setState(86);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(84); match(ASSIGN);
				setState(85); singleExpression(0);
				}
			}

			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(88); match(DOT);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleExpressionContext extends ParserRuleContext {
		public SingleExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleExpression; }
	 
		public SingleExpressionContext() { }
		public void copyFrom(SingleExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParenthesizedExpressionContext extends SingleExpressionContext {
		public ExpressionSequenceContext expressionSequence() {
			return getRuleContext(ExpressionSequenceContext.class,0);
		}
		public ParenthesizedExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterParenthesizedExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitParenthesizedExpression(this);
		}
	}
	public static class AdditiveExpressionContext extends SingleExpressionContext {
		public TerminalNode ADD() { return getToken(PlainEnglishParser.ADD, 0); }
		public TerminalNode MINUS() { return getToken(PlainEnglishParser.MINUS, 0); }
		public SingleExpressionContext singleExpression(int i) {
			return getRuleContext(SingleExpressionContext.class,i);
		}
		public List<SingleExpressionContext> singleExpression() {
			return getRuleContexts(SingleExpressionContext.class);
		}
		public AdditiveExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterAdditiveExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitAdditiveExpression(this);
		}
	}
	public static class RelationalExpressionContext extends SingleExpressionContext {
		public TerminalNode GREATERTHANEQ() { return getToken(PlainEnglishParser.GREATERTHANEQ, 0); }
		public TerminalNode LESSTHANEQ() { return getToken(PlainEnglishParser.LESSTHANEQ, 0); }
		public TerminalNode GREATERTHAN() { return getToken(PlainEnglishParser.GREATERTHAN, 0); }
		public TerminalNode LESSTHAN() { return getToken(PlainEnglishParser.LESSTHAN, 0); }
		public SingleExpressionContext singleExpression(int i) {
			return getRuleContext(SingleExpressionContext.class,i);
		}
		public List<SingleExpressionContext> singleExpression() {
			return getRuleContexts(SingleExpressionContext.class);
		}
		public RelationalExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterRelationalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitRelationalExpression(this);
		}
	}
	public static class LogicalAndExpressionContext extends SingleExpressionContext {
		public TerminalNode AND() { return getToken(PlainEnglishParser.AND, 0); }
		public SingleExpressionContext singleExpression(int i) {
			return getRuleContext(SingleExpressionContext.class,i);
		}
		public List<SingleExpressionContext> singleExpression() {
			return getRuleContexts(SingleExpressionContext.class);
		}
		public LogicalAndExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterLogicalAndExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitLogicalAndExpression(this);
		}
	}
	public static class LiteralExpressionContext extends SingleExpressionContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public LiteralExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterLiteralExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitLiteralExpression(this);
		}
	}
	public static class LogicalOrExpressionContext extends SingleExpressionContext {
		public SingleExpressionContext singleExpression(int i) {
			return getRuleContext(SingleExpressionContext.class,i);
		}
		public TerminalNode OR() { return getToken(PlainEnglishParser.OR, 0); }
		public List<SingleExpressionContext> singleExpression() {
			return getRuleContexts(SingleExpressionContext.class);
		}
		public LogicalOrExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterLogicalOrExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitLogicalOrExpression(this);
		}
	}
	public static class ArrayLiteralExpressionContext extends SingleExpressionContext {
		public ArrayGetContext arrayGet() {
			return getRuleContext(ArrayGetContext.class,0);
		}
		public ArrayLiteralExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterArrayLiteralExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitArrayLiteralExpression(this);
		}
	}
	public static class DecreaseExpressionContext extends SingleExpressionContext {
		public TerminalNode DECREASE() { return getToken(PlainEnglishParser.DECREASE, 0); }
		public SingleExpressionContext singleExpression() {
			return getRuleContext(SingleExpressionContext.class,0);
		}
		public DecreaseExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterDecreaseExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitDecreaseExpression(this);
		}
	}
	public static class ArrayAssignmentExpressionContext extends SingleExpressionContext {
		public ArrayLiteralContext arrayLiteral() {
			return getRuleContext(ArrayLiteralContext.class,0);
		}
		public ArrayAssignmentExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterArrayAssignmentExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitArrayAssignmentExpression(this);
		}
	}
	public static class IdentifierExpressionContext extends SingleExpressionContext {
		public TerminalNode IDENTIFIER() { return getToken(PlainEnglishParser.IDENTIFIER, 0); }
		public IdentifierExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterIdentifierExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitIdentifierExpression(this);
		}
	}
	public static class ArgumentsExpressionContext extends SingleExpressionContext {
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public SingleExpressionContext singleExpression() {
			return getRuleContext(SingleExpressionContext.class,0);
		}
		public ArgumentsExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterArgumentsExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitArgumentsExpression(this);
		}
	}
	public static class FunctionExpressionContext extends SingleExpressionContext {
		public TerminalNode FUNCTION() { return getToken(PlainEnglishParser.FUNCTION, 0); }
		public TerminalNode ENDFUNC() { return getToken(PlainEnglishParser.ENDFUNC, 0); }
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode STARTFUNC() { return getToken(PlainEnglishParser.STARTFUNC, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(PlainEnglishParser.IDENTIFIER, 0); }
		public FunctionExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterFunctionExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitFunctionExpression(this);
		}
	}
	public static class IncrementExpressionContext extends SingleExpressionContext {
		public TerminalNode INCREMENT() { return getToken(PlainEnglishParser.INCREMENT, 0); }
		public SingleExpressionContext singleExpression() {
			return getRuleContext(SingleExpressionContext.class,0);
		}
		public IncrementExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterIncrementExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).exitIncrementExpression(this);
		}
	}
	public static class EqualityExpressionContext extends SingleExpressionContext {
		public TerminalNode NOTEQUALS() { return getToken(PlainEnglishParser.NOTEQUALS, 0); }
		public SingleExpressionContext singleExpression(int i) {
			return getRuleContext(SingleExpressionContext.class,i);
		}
		public List<SingleExpressionContext> singleExpression() {
			return getRuleContexts(SingleExpressionContext.class);
		}
		public TerminalNode EQUALSCOM() { return getToken(PlainEnglishParser.EQUALSCOM, 0); }
		public EqualityExpressionContext(SingleExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlainEnglishListener ) ((PlainEnglishListener)listener).enterEqualityExpression(this);
		}
		@Override
